--- a/dependencies/itl/install
+++ b/dependencies/itl/install
@@ -11,7 +11,7 @@ if __name__ == "__main__":
     os.system("sudo apt-get install -y patchelf")
 
     originalItl = open("itl-original", "r")
-    newItl = open("itl", "w")
+    newItl = open("itl/itl.py", "w")
 
     line = originalItl.readline()
     while line:
@@ -24,19 +24,5 @@ if __name__ == "__main__":
     originalItl.close()
     newItl.close()
 
-    permissions = os.stat("itl")
-    os.chmod("itl", permissions.st_mode | stat.S_IROTH | stat.S_IXOTH | stat.S_IWOTH)
+    os.system("python3 python-setup.py install")
 
-    newItl = open("itl", "r")
-    toolItl = open("/usr/bin/itl", "w")
-
-    line = newItl.read()
-    while line:
-    	toolItl.write(line)
-    	line = newItl.read()
-
-    newItl.close()
-    toolItl.close()
-
-    permissions = os.stat("/usr/bin/itl")
-    os.chmod("/usr/bin/itl", permissions.st_mode | stat.S_IROTH | stat.S_IXOTH)
